2011-09-05  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13144]
	* sysdeps/unix/sysv/linux/x86_64/bits/sem.h (semdid_ds): Fix to match
	kernel in 64-bit binaries.

2011-09-01  David S. Miller  <davem@davemloft.net>

	* elf/elf.h (HWCAP_SPARC_*): Move to..
	* sysdeps/sparc/sysdep.h: this new file and add new values.
	* sysdeps/unix/sparc/sysdep.h: Include sysdeps/sparc/sysdep.h
	* sysdeps/sparc/dl-procinfo.h: Include sysdep.h and increase
	_DL_HWCAP_COUNT to 24.
	* sysdeps/sparc/dl-procinfo.c (_dl_sparc_cap_flags): Add new
	entries.
	* sysdeps/sparc/sparc32/bits/atomic.h: Don't use magic local
	__ATOMIC_HWCAP_SPARC_V9 define, use sysdep.h one instead.
	* sysdeps/sparc/sparc32/dl-machine.h: Include sysdep.h
	* sysdeps/sparc/sparc64/multiarch/memcpy.S: Use HWCAP_SPARC_*
	instead of magic constants.
	* sysdeps/sparc/sparc64/multiarch/memset.S: Likewise.

2011-08-31  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sparc/sysdep.h (SETUP_PIC_REG): Define.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sysdep.h (PSEUDO):
	Reimplement to do errno handling inline.
	(SYSCALL_ERROR_HANDLER): New macro.
	(__SYSCALL_STRING): Do not do errno handling in asm.
	(__CLONE_SYSCALL_STRING): Delete.
	(__INTERNAL_SYSCALL_STRING): Delete.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep.h: Include
	sysdeps/unix/sparc/sysdep.h instead of sysdeps/unix/sysdep.h
	(PSEUDO): Reimplement to do errno handling inline.
	(ret, ret_NOERRNO, ret_ERRVAL, r0, r1, MOVE): Don't redefine.
	(SYSCALL_ERROR_HANDLER): New macro.
	(__SYSCALL_STRING): Do not do errno handling in asm.
	(__CLONE_SYSCALL_STRING): Delete.
	(__INTERNAL_SYSCALL_STRING): Delete.
	* sysdeps/unix/sysv/linux/sparc/sysdep.h (INLINE_SYSCALL):
	Implement in terms of INTERNAL_SYSCALL and __set_errno, just like
	i386.
	(INTERNAL_SYSCALL_DECL): Declare %g1 var for err state.
	(inline_syscall*): Add 'err' argument.
	(INTERNAL_SYSCALL, INTERNAL_SYSCALL_NCS,
	INTERNAL_SYSCALL_ERROR_P): Likewise and pass it down.