@@ -1,0 +1,3 @@
+# We must list this here to move it ahead of the ldbl-opt code.
+sparc/sparc32/sparcv9/fpu
+sparc/sparc32/fpu
