@@ -1,3 +1,12 @@
+2011-09-05  David S. Miller  <davem@davemloft.net>
+
+	* sysdeps/sparc/sparc32/fpu/s_fabsf.S: Use first argument
+	stack slot, rather than the struct return pointer slot.
+	* sysdeps/sparc/sparc32/fpu/s_fabs.c: Delete.
+	* sysdeps/sparc/sparc32/fpu/s_fabs.S: New file.
+	* sysdeps/sparc/sparc32/sparcv9/fpu/s_fabs.S: Likewise.
+	* sysdeps/unix/sysv/linux/sparc/sparc32/sparcv9/fpu/Implies: Likewise.
+
 2011-09-05  Ulrich Drepper  <drepper@gmail.com>
 
 	[BZ #13144]
